# youtube-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality.yaml
tests/: test_app.py
youtube_downloader/: __main__.py  constants.py
